-
Bug
-
Resolution: Done
-
P2: Important
-
5.15
-
None
-
-
a2f7de70d60a9ac212a575cae2387adfb0e5426b (qt/qtdeclarative/5.15)
examples/quick/window segfaults.
Stack trace:
#0 operator== (s1=..., s2=...) at /home/max/qt/5.15/qtbase/src/corelib/text/qstring.cpp:3380 #1 0x00007ffff67ba784 in operator!= (s1=..., s2=...) at /home/max/qt/5.15.build/qtbase/include/QtCore/../../../../5.15/qtbase/src/corelib/text/qstring.h:768 #2 0x00007ffff69f006f in QQmlVMEMetaObject::metaCall (this=0x8c33b0, o=0x8c2ac0, c=QMetaObject::WriteProperty, _id=78, a=0x7fffffffcd60) at /home/max/qt/5.15/qtdeclarative/src/qml/qml/qqmlvmemetaobject.cpp:755 #3 0x00007ffff5fb8ed9 in QMetaObject::metacall (object=0x8c2ac0, cl=QMetaObject::WriteProperty, idx=78, argv=0x7fffffffcd60) at /home/max/qt/5.15/qtbase/src/corelib/kernel/qmetaobject.cpp:314 #4 0x00007ffff6a0ebed in QQmlPropertyData::writeProperty (this=0x89f998, target=0x8c2ac0, value=0x7fffffffd370, flags=...) at /home/max/qt/5.15.build/qtbase/include/QtQml/5.15.0/QtQml/private/../../../../../../../5.15/qtdeclarative/src/qml/qml/qqmlpropertydata_p.h:290 #5 0x00007ffff6a0c10a in QQmlPropertyPrivate::write (object=0x8c2ac0, property=..., value=..., context=0x0, flags=...) at /home/max/qt/5.15/qtdeclarative/src/qml/qml/qqmlproperty.cpp:1223 #6 0x00007ffff6a0bef8 in QQmlPropertyPrivate::writeValueProperty (object=0x8c2ac0, core=..., valueTypeData=..., value=..., context=0x0, flags=...) at /home/max/qt/5.15/qtdeclarative/src/qml/qml/qqmlproperty.cpp:1191 #7 0x00007ffff6a0bdb9 in QQmlPropertyPrivate::writeValueProperty (this=0x89f960, value=..., flags=...) at /home/max/qt/5.15/qtdeclarative/src/qml/qml/qqmlproperty.cpp:1170 #8 0x00007ffff6a0d860 in QQmlPropertyPrivate::write (that=..., value=..., flags=...) at /home/max/qt/5.15/qtdeclarative/src/qml/qml/qqmlproperty.cpp:1538 #9 0x00007ffff6a0d633 in QQmlProperty::write (this=0x7fffffffd308, value=...) at /home/max/qt/5.15/qtdeclarative/src/qml/qml/qqmlproperty.cpp:1454 #10 0x00007ffff6df2dac in QQDMIncubationTask::initializeRequiredProperties (this=0x8c2190, modelItemToIncubate=0x8c20d0, object=0x8c2ac0) at /home/max/qt/5.15/qtdeclarative/src/qmlmodels/qqmldelegatemodel.cpp:990 #11 0x00007ffff6df3639 in QQmlDelegateModelPrivate::setInitialState (this=0x631f10, incubationTask=0x8c2190, o=0x8c2ac0) at /home/max/qt/5.15/qtdeclarative/src/qmlmodels/qqmldelegatemodel.cpp:1106 #12 0x00007ffff6df35fb in QQDMIncubationTask::setInitialState (this=0x8c2190, o=0x8c2ac0) at /home/max/qt/5.15/qtdeclarative/src/qmlmodels/qqmldelegatemodel.cpp:1100 #13 0x00007ffff6a1964a in QQmlIncubatorPrivate::incubate (this=0x8c2200, i=...) at /home/max/qt/5.15/qtdeclarative/src/qml/qml/qqmlincubator.cpp:332 #14 0x00007ffff6a1888d in QQmlEnginePrivate::incubate (this=0x4f19a0, i=..., forContext=0x6304b0) at /home/max/qt/5.15/qtdeclarative/src/qml/qml/qqmlincubator.cpp:89 #15 0x00007ffff6a13032 in QQmlComponentPrivate::incubateObject (this=0x631bc0, incubationTask=0x8c2190, component=0x631ba0, engine=0x7fffffffdbc0, context=0x8c23a0, forContext=0x6304b0) at /home/max/qt/5.15/qtdeclarative/src/qml/qml/qqmlcomponent.cpp:1225 #16 0x00007ffff6df3d64 in QQmlDelegateModelPrivate::object (this=0x631f10, group=QQmlListCompositor::Default, index=0, incubationMode=QQmlIncubator::AsynchronousIfNested) at /home/max/qt/5.15/qtdeclarative/src/qmlmodels/qqmldelegatemodel.cpp:1190 #17 0x00007ffff6df3fb0 in QQmlDelegateModel::object (this=0x631ee0, index=0, incubationMode=QQmlIncubator::AsynchronousIfNested) at /home/max/qt/5.15/qtdeclarative/src/qmlmodels/qqmldelegatemodel.cpp:1231 #18 0x00007ffff7c12626 in QQuickRepeaterPrivate::requestItems (this=0x631870) at /home/max/qt/5.15/qtdeclarative/src/quick/items/qquickrepeater.cpp:407 #19 0x00007ffff7c125d0 in QQuickRepeater::regenerate (this=0x6317b0) at /home/max/qt/5.15/qtdeclarative/src/quick/items/qquickrepeater.cpp:401 #20 0x00007ffff7c122a5 in QQuickRepeater::componentComplete (this=0x6317b0) at /home/max/qt/5.15/qtdeclarative/src/quick/items/qquickrepeater.cpp:351 #21 0x00007ffff6a9dfcd in QQmlObjectCreator::finalize (this=0x510240, interrupt=...) at /home/max/qt/5.15/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:1386 #22 0x00007ffff6a125c8 in QQmlComponentPrivate::complete (enginePriv=0x4f19a0, state=0x4f0388) at /home/max/qt/5.15/qtdeclarative/src/qml/qml/qqmlcomponent.cpp:988 #23 0x00007ffff6a12977 in QQmlComponentPrivate::completeCreate (this=0x4f0300) at /home/max/qt/5.15/qtdeclarative/src/qml/qml/qqmlcomponent.cpp:1080 #24 0x00007ffff6a1286e in QQmlComponent::completeCreate (this=0x7fffffffdbb0) at /home/max/qt/5.15/qtdeclarative/src/qml/qml/qqmlcomponent.cpp:1067 #25 0x00007ffff6a11dcb in QQmlComponent::create (this=0x7fffffffdbb0, context=0x0) at /home/max/qt/5.15/qtdeclarative/src/qml/qml/qqmlcomponent.cpp:821
Used commits:{{}}
2d6008e820 (HEAD -> fix_linter_warnings) Make draganddrop example less confusing b5d3992dd4 WIP: Fix some linter warnings in examples a5bbad045b Add (and ignore for now) type assertions to QML 482f48fd25 Generate registrations for all imports 63598bad5c Generate registrations for all examples
For Gerrit Dashboard: QTBUG-80420 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
283170,2 | QQmlDelegateModel: Read values from the correct object | 5.15 | qt/qtdeclarative | Status: MERGED | +2 | 0 |