QQmlDelegateModel: Read values from the correct object

If we have a proxyObject, we need to use that one for reading proxy
values. Otherwise the read operation will crash.

Fixes: QTBUG-80420
Change-Id: I88cd5499802bff1aea2e43da9ab61d6565ab7ede
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>